--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -24,5 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: git rm yarn.lock
+    - run: git rm package-lock.json
     - run: yarn install
     - run: yarn build --if-present
