--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.11"
+    "@testing-library/react": "^11.2.7",
+    "@types/react": "^17.0.11",
+    "msw": "^0.30.0"
   }
 }
